--- a/src/app/pages/funstuff/funstuff.css
+++ b/src/app/pages/funstuff/funstuff.css
@@ -6,4 +6,4 @@
   align-items: center;
   height: 90vh;
 }
-h2{font-size: 30px; text-align: center; margin-bottom: 8px; margin-top: 100px;}
+h2{font-size: 30px; text-align: center; margin-bottom: 8px; margin-top: 0px;}
