--- a/src/app/pages/gallery/gallery/gallery.css
+++ b/src/app/pages/gallery/gallery/gallery.css
@@ -1,9 +1,9 @@
 .gallery
 {
-    width: 800px;
+    width: 700px;
     margin: 0 auto;
 
     text-align: center;
 
 }
-h1{font-size: 40px;}
+h1{font-size: 40px; margin-top: -30px;}
