--- a/src/app/pages/home/home.css
+++ b/src/app/pages/home/home.css
@@ -1,4 +1,4 @@
 body{text-align: center;}
-h1{font-size: 40px;}
+h1{font-size: 40px; margin-top: -30px;}
 p{font-size: 25px;}
 img{image-rendering: pixelated; width: 500px; height: auto;}
