--- a/src/app/pages/randominfo/randominfo.css
+++ b/src/app/pages/randominfo/randominfo.css
@@ -1,10 +1,11 @@
 body{width: 1500px;
 text-align: center;
 margin: 0 auto;
+margin-top: -30px;
 }
-h1{font-size: 40px;}
-h2{font-size: 30px;}
-h3{font-size: 25px;}
+h1{font-size: 35px;}
+h2{font-size: 25px;}
+h3{font-size: 20px;}
 .gallery
 {
     width: 200px;
